// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtKBColumnConfiguration component should render column "absorption": absorption 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Abs(max) = ~10nm
  </section>
  <section
    class="text-block"
  >
    <div
      class="text-block"
    >
      value1.
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
    </div>
    <button
      aria-controls="1"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="1"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "accession": accession 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/uniprotkb/P21802"
    >
      P21802
    </a>
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "annotation_score": annotation_score 1`] = `
<DocumentFragment>
  <span
    title="Annotation Score"
  >
    <span
      class="doughnut-chart--medium colour-platinum"
    >
      <span
        class="doughnut-chart--medium__left-wrap"
      >
        <span
          class="doughnut-chart--medium__left-wrap__loader colour-sea-blue"
          style="transform: rotate(0deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__right-wrap"
      >
        <span
          class="doughnut-chart--medium__right-wrap__loader colour-sea-blue"
          style="transform: rotate(72deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__inner-circle"
      >
        1/5
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_activity_regulation": cc_activity_regulation 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_allergen": cc_allergen 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_alternative_products": cc_alternative_products 1`] = `
<DocumentFragment>
  <p>
    This entry describes 
    <strong>
      1
    </strong>
     isoforms produced by 
    <strong>
      Alternative initiation
    </strong>
    .
  </p>
  <p>
    value1
  </p>
  <h3
    id="Isoform_name"
  >
    isoID1
  </h3>
  <ul
    class="info-list info-list--columns"
  >
    <li>
      <div
        class="decorated-list-item decorated-list-item--compact"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Name
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          name
        </div>
      </div>
    </li>
    <li>
      <div
        class="decorated-list-item decorated-list-item--compact"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Synonyms
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          syn value
        </div>
      </div>
    </li>
    <li>
      <div
        class="decorated-list-item decorated-list-item--compact"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Note
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          value1
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_biotechnology": cc_biotechnology 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_catalytic_activity": cc_catalytic_activity 1`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
    <h4
      class="tiny"
    >
      Isoform 3
    </h4>
     some reaction
    <div>
      This reaction proceeds in the 
      <span
        data-testid="direction-text"
      >
        backward
      </span>
       direction 
    </div>
    <div>
      <span
        class="ec-number"
      >
        EC: 1.2.4.5
      </span>
       ( 
      <a
        href="/uniprotkb?query=(ec:1.2.4.5)"
      >
        UniProtKB 
        <test-file-stub
          width="1.333ch"
        />
      </a>
       | 
      <a
        class="external-link"
        href="https://enzyme.expasy.org/EC/1.2.4.5"
        rel="noopener"
        target="_blank"
      >
        ENZYME
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      | 
      <a
        class="external-link"
        href="https://www.rhea-db.org/rhea?query=ec:1.2.4.5"
        rel="noopener"
        target="_blank"
      >
        Rhea
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      )
    </div>
    <div>
      <strong>
        Source: 
      </strong>
      <a
        class="external-link"
        href="https://www.rhea-db.org/rhea/12345"
        rel="noopener"
        target="_blank"
      >
        Rhea 12345
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
    </div>
    <div
      class="rhea-reaction-visualizer__toggle"
    >
      <test-file-stub
        width="1ch"
      />
      <button
        class="button tertiary"
        type="button"
      >
        View Rhea reaction
      </button>
    </div>
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_caution": cc_caution 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_cofactor": cc_cofactor 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h4
      class="tiny"
    >
      <a
        href="#molecule"
      >
        molecule
      </a>
    </h4>
    <span>
      Cofactor Name 
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
    </span>
    <div
      class="text-block"
    >
      value2.
      <button
        aria-controls="1"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="1"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_developmental_stage": cc_developmental_stage 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_disease": cc_disease 1`] = `
<DocumentFragment>
  <h3>
    DiseaseEntry Id (someAcron)
  </h3>
  <span
    class="text-block"
  >
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </span>
  <ul
    class="info-list"
  >
    <li>
      <div
        class="decorated-list-item"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Note
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          <ul
            class="expandable-list no-bullet"
          >
            <li>
              value2
              <button
                aria-controls="1"
                aria-expanded="false"
                class="svg-colour-unreviewed evidence-tag"
                data-testid="evidence-tag-trigger"
                type="button"
              >
                <test-file-stub
                  height="12"
                  width="12"
                />
                <span
                  class="evidence-tag__label"
                >
                  1 automatic annotation
                </span>
              </button>
              <div
                class="evidence-tag-content "
                data-testid="evidence-tag-content"
                id="1"
              />
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li>
      <div
        class="decorated-list-item"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            Description
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          some description
        </div>
      </div>
    </li>
    <li>
      <div
        class="decorated-list-item"
      >
        <div
          class="decorated-list-item__title"
        >
          <h5
            class="bold"
          >
            See also
          </h5>
        </div>
        <div
          class="decorated-list-item__content"
        >
          <a
            class="external-link"
            href="https://www.omim.org/entry/3124"
            rel="noopener"
            target="_blank"
          >
            3124
            <test-file-stub
              data-testid="external-link-icon"
              width="12.5"
            />
          </a>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_disruption_phenotype": cc_disruption_phenotype 1`] = `
<DocumentFragment>
  <h4
    class="tiny"
  >
    Isoform 4
  </h4>
  <div
    class="text-block"
  >
    value.
  </div>
  <h4
    class="tiny"
  >
    Isoform 4 dfs
  </h4>
  <div
    class="text-block"
  >
    value.
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_domain": cc_domain 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_function": cc_function 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_induction": cc_induction 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_interaction": cc_interaction 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <div
        class="no-wrap"
      >
        <a
          href="/uniprotkb/P12345"
        >
          P12345
        </a>
         (gen)
      </div>
    </li>
    <li>
      <div
        class="no-wrap"
      >
        <a
          href="/uniprotkb/P12345-1"
        >
          P12345-1
        </a>
         (gene1)
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_mass_spectrometry": cc_mass_spectrometry 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      isoform 1
    </h3>
    Molecular mass is 2.1 Da. Determined by LSI. note value
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_miscellaneous": cc_miscellaneous 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_pathway": cc_pathway 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_pharmaceutical": cc_pharmaceutical 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_polymorphism": cc_polymorphism 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_ptm": cc_ptm 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_rna_editing": cc_rna_editing 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <div>
      Edited at position 
      <span>
        1 
        <button
          aria-controls="0"
          aria-expanded="false"
          class="svg-colour-unreviewed evidence-tag"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="0"
        />
      </span>
    </div>
    <div>
      <span>
        value 
        <button
          aria-controls="1"
          aria-expanded="false"
          class="svg-colour-unreviewed evidence-tag"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="1"
        />
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_sequence_caution": cc_sequence_caution 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <test-file-stub
        data-testid="external-link-icon"
        width="12.5"
      />
    </a>
     differs from that shown. Reason: Erroneous gene model prediction Text note
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_subcellular_location": cc_subcellular_location 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      molecule value
    </h3>
    <div
      id="id1term"
    >
      <strong>
        location value
      </strong>
       
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
      ; topology value 
      <button
        aria-controls="1"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="1"
      />
    </div>
    <div
      class="text-block"
    >
      value.
      <button
        aria-controls="2"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="2"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_subunit": cc_subunit 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_tissue_specificity": cc_tissue_specificity 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_toxic_dose": cc_toxic_dose 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "comment_count": comment_count 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span
        class="capitalize"
      >
        alternative products (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        biophysicochemical properties (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        catalytic activity (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        cofactor (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        disease (1)
      </span>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        7 more comments
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "comment_count": comment_count-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span
        class="capitalize"
      >
        alternative products (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        biophysicochemical properties (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        catalytic activity (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        cofactor (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        disease (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        disruption phenotype (2)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        interaction (2)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        mass spectrometry (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        rna editing (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        sequence caution (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        subcellular location (1)
      </span>
    </li>
    <li>
      <span
        class="capitalize"
      >
        web resource (1)
      </span>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Less comments
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "date_created": date_created 1`] = `
<DocumentFragment>
  2015-08-02
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "date_modified": date_modified 1`] = `
<DocumentFragment>
  2016-04-24
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "date_sequence_modified": date_sequence_modified 1`] = `
<DocumentFragment>
  2017-01-21
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ec": ec 1`] = `
<DocumentFragment>
  1.2.3.4
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "error_gmodel_pred": error_gmodel_pred 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <test-file-stub
        data-testid="external-link-icon"
        width="12.5"
      />
    </a>
     differs from that shown. Reason: Erroneous gene model prediction Text note
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "feature_count": feature_count 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Chain (1)
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "fragment": fragment 1`] = `
<DocumentFragment>
  Fragment
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "from": from 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_act_site": ft_act_site 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_binding": ft_binding 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_ca_bind": ft_ca_bind 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_carbohyd": ft_carbohyd 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_chain": ft_chain 1`] = `
<DocumentFragment>
  <table
    class="data-table--compact"
  >
    <thead>
      <tr>
        <th
          data-filter="type"
        >
          Type
        </th>
        <th>
          ID
        </th>
        <th>
          Positions
        </th>
        <th>
          Description
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-end="8"
        data-id="id value CHAIN"
        data-start="2"
      >
        <td
          data-filter="type"
          data-filter-value="Chain"
        >
          Chain
        </td>
        <td>
          id value CHAIN
        </td>
        <td>
          2-8
        </td>
        <td>
          description value 123
          <button
            aria-controls="0"
            aria-expanded="false"
            class="svg-colour-reviewed evidence-tag"
            data-testid="evidence-tag-trigger"
            type="button"
          >
            <test-file-stub
              height="12"
              width="12"
            />
            <span
              class="evidence-tag__label"
            >
              1 publication
            </span>
          </button>
          <div
            class="evidence-tag-content "
            data-testid="evidence-tag-content"
            id="0"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ft_coiled": ft_coiled 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_compbias": ft_compbias 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_conflict": ft_conflict 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_crosslnk": ft_crosslnk 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_disulfid": ft_disulfid 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_dna_bind": ft_dna_bind 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_domain": ft_domain 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_helix": ft_helix 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_init_met": ft_init_met 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_intramem": ft_intramem 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_lipid": ft_lipid 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_metal": ft_metal 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_mod_res": ft_mod_res 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_motif": ft_motif 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_mutagen": ft_mutagen 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_non_cons": ft_non_cons 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_non_std": ft_non_std 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_non_ter": ft_non_ter 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_np_bind": ft_np_bind 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_peptide": ft_peptide 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_propep": ft_propep 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_region": ft_region 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_repeat": ft_repeat 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_signal": ft_signal 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_site": ft_site 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_strand": ft_strand 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_topo_dom": ft_topo_dom 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_transit": ft_transit 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_transmem": ft_transmem 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_turn": ft_turn 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_unsure": ft_unsure 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_var_seq": ft_var_seq 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_variant": ft_variant 1`] = `
<DocumentFragment>
  <div
    class="loader-container"
  >
    <test-file-stub
      classname="loader"
      height="100"
      width="100"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ft_zn_fing": ft_zn_fing 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "gene_names": gene_names 1`] = `
<DocumentFragment>
  <span
    style="font-weight: bolder;"
  >
    some Gene
  </span>
  <button
    aria-expanded="false"
    class="button tertiary ellipsis-reveal"
    title="Show more"
    type="button"
  >
    [...]
  </button>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_names": gene_names-expanded 1`] = `
<DocumentFragment>
  <span
    style="font-weight: bolder;"
  >
    some Gene
  </span>
  , some Syn, some locus, some orf
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_oln": gene_oln 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some locus
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_orf": gene_orf 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some orf
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_primary": gene_primary 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some Gene
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_synonym": gene_synonym 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some Syn
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "go": go 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "go_c": go_c 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "go_f": go_f 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "go_id": go_id 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "go_p": go_p 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <span>
    uniprot_id
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "keyword": keyword 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/keywords/KW-11111"
      >
         #keyword value
      </a>
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "keywordid": keywordid 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/keywords/KW-11111"
      >
         #KW-11111
      </a>
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "kinetics": kinetics 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="no-bullet"
    >
      <li>
        K
        <sub>
          M
        </sub>
        =2.0999999046325684μM for sub1 
        <button
          aria-controls="0"
          aria-expanded="false"
          class="svg-colour-unreviewed evidence-tag"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="0"
        />
      </li>
    </ul>
    <ul
      class="no-bullet"
    >
      <li>
        V
        <sub>
          max
        </sub>
        =1unit1 for enzyme1 
        <button
          aria-controls="1"
          aria-expanded="false"
          class="svg-colour-unreviewed evidence-tag"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <test-file-stub
            height="12"
            width="12"
          />
          <span
            class="evidence-tag__label"
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="1"
        />
      </li>
    </ul>
  </section>
  <section
    class="text-block"
  >
    <div
      class="text-block"
    >
      value1.
      <button
        aria-controls="2"
        aria-expanded="false"
        class="svg-colour-unreviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="2"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "length": length 1`] = `
<DocumentFragment>
  10 AA
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "lineage": lineage 1`] = `
<DocumentFragment>
  lineage 1
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "lit_pubmed_id": lit_pubmed_id 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/citations/12345"
      >
        12345
      </a>
    </li>
    <li>
      <a
        href="/citations/12346"
      >
        12346
      </a>
    </li>
    <li>
      <a
        href="/citations/12347"
      >
        12347
      </a>
    </li>
    <li>
      <a
        href="/citations/12348"
      >
        12348
      </a>
    </li>
    <li>
      <a
        href="/citations/12349"
      >
        12349
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        2 more IDs
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "lit_pubmed_id": lit_pubmed_id-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/citations/12345"
      >
        12345
      </a>
    </li>
    <li>
      <a
        href="/citations/12346"
      >
        12346
      </a>
    </li>
    <li>
      <a
        href="/citations/12347"
      >
        12347
      </a>
    </li>
    <li>
      <a
        href="/citations/12348"
      >
        12348
      </a>
    </li>
    <li>
      <a
        href="/citations/12349"
      >
        12349
      </a>
    </li>
    <li>
      <a
        href="/citations/12350"
      >
        12350
      </a>
    </li>
    <li>
      <a
        href="/citations/12351"
      >
        12351
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Less IDs
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "mass": mass 1`] = `
<DocumentFragment>
  1,185 Da
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "organelle": organelle 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Cyanelle
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
    title="scientific name (common name) (synonyms 1), taxon ID 9606"
  >
    9606
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "organism_name": organism_name 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
    title="scientific name (common name) (synonyms 1), taxon ID 9606"
  >
    scientific name (common name) (synonyms 1)
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ph_dependence": ph_dependence 1`] = `
<DocumentFragment>
  <div
    class="text-block"
  >
    value1.
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "protein_existence": protein_existence 1`] = `
<DocumentFragment>
  1: Evidence at protein level
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "protein_families": protein_families 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "protein_name": protein_name 1`] = `
<DocumentFragment>
  <span
    style="font-weight: bolder;"
  >
    rec full Name
  </span>
  <button
    aria-expanded="false"
    class="button tertiary ellipsis-reveal"
    title="Show more"
    type="button"
  >
    [...]
  </button>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "protein_name": protein_name-expanded 1`] = `
<DocumentFragment>
  <span
    style="font-weight: bolder;"
  >
    rec full Name
  </span>
  , recommended short name, 1.2.3.4, a full alt Name, short alt name1, 1.2.3.3, allergen, biotech, cd antigen, inn antigen, sub full Name, 1.2.3.5, includesrec full Name, includesrecommended short name, includesa full alt Name, includesshort alt name1
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "redox_potential": redox_potential 1`] = `
<DocumentFragment>
  <div
    class="text-block"
  >
    value1.
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "reviewed": reviewed 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--reviewed"
    title="This marks a reviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "rhea_id": rhea_id 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span
        class="no-wrap"
      >
        12345 ( 
        <a
          href="/uniprotkb?query=(cc_catalytic_activity:\\"rhea:12345\\")"
        >
          UniProtKB 
          <test-file-stub
            width="1.333ch"
          />
        </a>
         | 
        <a
          class="external-link"
          href="https://www.rhea-db.org/rhea/12345"
          rel="noopener"
          target="_blank"
        >
          Rhea
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
        )
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "sequence": sequence 1`] = `
<DocumentFragment>
  <section
    class="sequence-container"
  >
    <div
      class="sequence"
    >
      <div
        class="sequence__sequence"
      >
        <span
          class="sequence__sequence__chunk"
        >
          <svg
            height="30"
            width="100"
          >
            <text
              class="sequence__sequence__chunk__counter"
              x="100"
              y="10"
            >
              10
            </text>
            <text
              class="sequence__sequence__chunk__sequence"
              x="0"
              y="20"
            >
              SAPSQDFMRF
            </text>
          </svg>
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "sequence_version": sequence_version 1`] = `
<DocumentFragment>
  <span>
    5
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "structure_3d": structure_3d 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "temp_dependence": temp_dependence 1`] = `
<DocumentFragment>
  <div
    class="text-block"
  >
    value1.
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-unreviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "tools": tools 1`] = `
<DocumentFragment>
  <div
    class="dropdown-container"
  >
    <button
      class="button primary dropdown tertiary"
      type="button"
    >
      Tools
    </button>
    <div
      class="dropdown-menu"
    />
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "uniparc_id": uniparc_id 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "version": version 1`] = `
<DocumentFragment>
  20
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "virus_hosts": virus_hosts 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/9606"
        title="scientific name (common name) (synonyms 1), taxon ID 9606"
      >
        scientific name (common name) (synonyms 1)
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "xref_abcd": xref_abcd 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_allergome": xref_allergome 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_antibodypedia": xref_antibodypedia 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_arachnoserver": xref_arachnoserver 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_araport": xref_araport 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_bgee": xref_bgee 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_bindingdb": xref_bindingdb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_biocyc": xref_biocyc 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_biogrid": xref_biogrid 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_biogrid-orcs": xref_biogrid-orcs 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_biomuta": xref_biomuta 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_bmrb": xref_bmrb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_brenda": xref_brenda 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_carbonyldb": xref_carbonyldb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_cazy": xref_cazy 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ccds": xref_ccds 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_cdd": xref_cdd 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_cgd": xref_cgd 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_chembl": xref_chembl 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_chitars": xref_chitars 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_clae": xref_clae 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_cleanex": xref_cleanex 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_collectf": xref_collectf 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_complexportal": xref_complexportal 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_compluyeast-2dpage": xref_compluyeast-2dpage 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_conoserver": xref_conoserver 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_corum": xref_corum 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_cptac": xref_cptac 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_cptc": xref_cptc 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ctd": xref_ctd 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_dbsnp": xref_dbsnp 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_depod": xref_depod 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_dictybase": xref_dictybase 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_dip": xref_dip 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_disgenet": xref_disgenet 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_disprot": xref_disprot 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_dmdm": xref_dmdm 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_dnasu": xref_dnasu 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_dosac-cobs-2dpage": xref_dosac-cobs-2dpage 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_drugbank": xref_drugbank 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_drugcentral": xref_drugcentral 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_echobase": xref_echobase 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_eggnog": xref_eggnog 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_elm": xref_elm 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_embl": xref_embl 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ensembl": xref_ensembl 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="https://www.ensembl.org/id/idEnsembl"
        rel="noopener"
        target="_blank"
      >
        idEnsembl
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      <a
        class="external-link"
        href="https://www.ensembl.org/id/description value"
        rel="noopener"
        target="_blank"
      >
        description value
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      Model [
      <a
        href="#Q9NXB0-1"
      >
        Q9NXB0-1
      </a>
      ]
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ensemblbacteria": xref_ensemblbacteria 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ensemblfungi": xref_ensemblfungi 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ensemblmetazoa": xref_ensemblmetazoa 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ensemblplants": xref_ensemblplants 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ensemblprotists": xref_ensemblprotists 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_epd": xref_epd 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_esther": xref_esther 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_euhcvdb": xref_euhcvdb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_evolutionarytrace": xref_evolutionarytrace 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_expressionatlas": xref_expressionatlas 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_flybase": xref_flybase 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_gene3d": xref_gene3d 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_genecards": xref_genecards 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_genedb": xref_genedb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_geneid": xref_geneid 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_genereviews": xref_genereviews 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_genetree": xref_genetree 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_genevisible": xref_genevisible 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_genewiki": xref_genewiki 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_genomernai": xref_genomernai 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_glyconnect": xref_glyconnect 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_glygen": xref_glygen 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_go": xref_go 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_gramene": xref_gramene 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_guidetopharmacology": xref_guidetopharmacology 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_hamap": xref_hamap 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_hgnc": xref_hgnc 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_hogenom": xref_hogenom 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_hpa": xref_hpa 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ideal": xref_ideal 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_imgt_gene-db": xref_imgt_gene-db 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_inparanoid": xref_inparanoid 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_intact": xref_intact 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_interpro": xref_interpro 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_iptmnet": xref_iptmnet 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_jpost": xref_jpost 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_kegg": xref_kegg 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ko": xref_ko 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_legiolist": xref_legiolist 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_leproma": xref_leproma 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_maizegdb": xref_maizegdb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_malacards": xref_malacards 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_massive": xref_massive 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_maxqb": xref_maxqb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_merops": xref_merops 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_metosite": xref_metosite 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_mgi": xref_mgi 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_mim": xref_mim 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_mint": xref_mint 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_moondb": xref_moondb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_moonprot": xref_moonprot 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_nextprot": xref_nextprot 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_niagads": xref_niagads 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ogp": xref_ogp 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_oma": xref_oma 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_opentargets": xref_opentargets 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_orphanet": xref_orphanet 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_orthodb": xref_orthodb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_panther": xref_panther 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pathwaycommons": xref_pathwaycommons 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_patric": xref_patric 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_paxdb": xref_paxdb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pcddb": xref_pcddb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pdb": xref_pdb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pdbsum": xref_pdbsum 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_peptideatlas": xref_peptideatlas 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_peroxibase": xref_peroxibase 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pfam": xref_pfam 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pharmgkb": xref_pharmgkb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pharos": xref_pharos 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_phi-base": xref_phi-base 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_phosphositeplus": xref_phosphositeplus 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_phylomedb": xref_phylomedb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pir": xref_pir 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pirsf": xref_pirsf 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_plantreactome": xref_plantreactome 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pombase": xref_pombase 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pride": xref_pride 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_prints": xref_prints 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pro": xref_pro 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_prodom": xref_prodom 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_promex": xref_promex 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_prosite": xref_prosite 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_proteomes": xref_proteomes 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_proteomicsdb": xref_proteomicsdb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_pseudocap": xref_pseudocap 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_reactome": xref_reactome 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_rebase": xref_rebase 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_refseq": xref_refseq 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_reproduction-2dpage": xref_reproduction-2dpage 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_rgd": xref_rgd 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_rnact": xref_rnact 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_sabio-rk": xref_sabio-rk 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_sasbdb": xref_sasbdb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_sfld": xref_sfld 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_sgd": xref_sgd 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_signalink": xref_signalink 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_signor": xref_signor 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_smart": xref_smart 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_smr": xref_smr 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_string": xref_string 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_supfam": xref_supfam 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_swiss-2dpage": xref_swiss-2dpage 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_swisslipids": xref_swisslipids 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_swisspalm": xref_swisspalm 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_tair": xref_tair 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_tcdb": xref_tcdb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_tigrfams": xref_tigrfams 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_topdownproteomics": xref_topdownproteomics 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_treefam": xref_treefam 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_tuberculist": xref_tuberculist 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ucd-2dpage": xref_ucd-2dpage 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_ucsc": xref_ucsc 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_unicarbkb": xref_unicarbkb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_unilectin": xref_unilectin 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_unipathway": xref_unipathway 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_vectorbase": xref_vectorbase 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_veupathdb": xref_veupathdb 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_vgnc": xref_vgnc 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_wbparasite": xref_wbparasite 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_world-2dpage": xref_world-2dpage 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_wormbase": xref_wormbase 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_xenbase": xref_xenbase 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "xref_zfin": xref_zfin 1`] = `<DocumentFragment />`;
